--- a/ATA_WPF/ATA_WPF.csproj
+++ b/ATA_WPF/ATA_WPF.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>ATA_WPF</AssemblyName>
     <RootNamespace>ATA_WPF</RootNamespace>
+    <EnableWindowsTargeting>true</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
