--- a/ATA_WPF/ATA_WPF.csproj
+++ b/ATA_WPF/ATA_WPF.csproj
@@ -11,7 +11,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ar1.png" />
+    <None Remove="ar2.png" />
+    <None Remove="ar3.png" />
+    <None Remove="ar4.png" />
+    <None Remove="arrow2.png" />
+    <None Remove="bluearrow.png" />
+    <None Remove="pngwing.com.png" />
+    <None Remove="set.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="ar1.png" />
+    <Resource Include="arrow2.png" />
+    <Resource Include="bluearrow.png" />
+    <Resource Include="pngwing.com.png" />
+    <Resource Include="set.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ATA_ClassLibrary\ATA_ClassLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="bin\Debug\net6.0-windows\" />
   </ItemGroup>
 
 </Project>
