--- a/ATA_WPF/ATA_WPF.csproj
+++ b/ATA_WPF/ATA_WPF.csproj
@@ -8,6 +8,7 @@
     <AssemblyName>ATA_WPF</AssemblyName>
     <RootNamespace>ATA_WPF</RootNamespace>
     <EnableWindowsTargeting>true</EnableWindowsTargeting>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,14 +18,25 @@
     <None Remove="ar4.png" />
     <None Remove="arrow2.png" />
     <None Remove="bluearrow.png" />
+    <None Remove="icon2.png" />
     <None Remove="pngwing.com.png" />
     <None Remove="set.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <COMReference Include="{215d64d2-031c-33c7-96e3-61794cd1ee61}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>4</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>215d64d2-031c-33c7-96e3-61794cd1ee61</Guid>
+    </COMReference>
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="ar1.png" />
     <Resource Include="arrow2.png" />
     <Resource Include="bluearrow.png" />
+    <Resource Include="icon2.png" />
     <Resource Include="pngwing.com.png" />
     <Resource Include="set.png" />
   </ItemGroup>
