--- a/ATA_WPF/ATA_WPF.csproj
+++ b/ATA_WPF/ATA_WPF.csproj
@@ -19,6 +19,15 @@
     <None Remove="arrow2.png" />
     <None Remove="bluearrow.png" />
     <None Remove="icon2.png" />
+    <None Remove="img\ar1.ico" />
+    <None Remove="img\deleteicon.ico" />
+    <None Remove="img\detailsicon.ico" />
+    <None Remove="img\reset.png" />
+    <None Remove="img\reset64px.png" />
+    <None Remove="img\restart.png" />
+    <None Remove="img\restarticon.ico" />
+    <None Remove="img\restarticon1.ico" />
+    <None Remove="img\xicon.ico" />
     <None Remove="pngwing.com.png" />
     <None Remove="set.png" />
   </ItemGroup>
@@ -37,6 +46,11 @@
     <Resource Include="arrow2.png" />
     <Resource Include="bluearrow.png" />
     <Resource Include="icon2.png" />
+    <Resource Include="img\ar1.ico" />
+    <Resource Include="img\deleteicon.ico" />
+    <Resource Include="img\detailsicon.ico" />
+    <Resource Include="img\restarticon1.ico" />
+    <Resource Include="img\xicon.ico" />
     <Resource Include="pngwing.com.png" />
     <Resource Include="set.png" />
   </ItemGroup>
