cleaned code. not sure if app is still working.

--- a/ATA_ClassLibrary/ATA_ClassLibrary.csproj
+++ b/ATA_ClassLibrary/ATA_ClassLibrary.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FilesC\" />
+    <Folder Include="ProcessC\" />
+  </ItemGroup>
+
 </Project>
