still moving files into folders

--- a/ATA_Updater/ATA_Updater.csproj
+++ b/ATA_Updater/ATA_Updater.csproj
@@ -11,4 +11,9 @@
     <ProjectReference Include="..\ATA_WPF\ATA_WPF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="VievModels\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
 </Project>
