--- a/ATA_WPF/ATA_WPF.csproj
+++ b/ATA_WPF/ATA_WPF.csproj
@@ -54,6 +54,7 @@
 
   <ItemGroup>
     <Folder Include="bin\Debug\net6.0-windows\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
 
   <ItemGroup>
